Fixed the footer responsiveness and the gmail size on mobile. Probably fully finished!

--- a/style.css
+++ b/style.css
@@ -735,6 +735,10 @@ footer{
         font-size: 55px;
     }
 
+    .contact-left a{
+        font-size: 40px;
+    }
+
     .contact-right input{
         height: 90px;
 
@@ -745,5 +749,12 @@ footer{
         height: 400px;
 
         font-size: 40px;
+    }
+
+    footer{
+        height: 100px;
+
+        font-size: 30px;
+        padding: 30px;
     }
 }
